# rust-gadgets

./: README.md
explain-flags/: Cargo.toml  README.md
explain-flags/src/: main.rs
fastq-check/: Cargo.toml  README.md
fastq-check/src/: main.rs
fastq-merge/: Cargo.toml  Makefile.toml  README.md  test.sh
fastq-merge/src/: main.rs
fastq-quality-plot/: Cargo.toml  Makefile.toml  README.md
fastq-quality-plot/data/: install_font.sh
fastq-quality-plot/src/: main.rs
git-apply-ignore/: Cargo.toml
git-apply-ignore/src/: main.rs
insert-size-distribution/: Cargo.toml
insert-size-distribution/src/: main.rs
insert-size-distribution/tests/: sample.bam
insert-size-plot/: Cargo.toml  README.md
insert-size-plot/src/: main.rs
insert-size-plot/tests/: qc_libraryv2.140.pl
myers-match/: Cargo.toml
myers-match/src/: main.rs
pid-memstats/: Cargo.toml  size-opt.sh
pid-memstats/src/: main.rs
port-alive/: Cargo.toml
port-alive/src/: main.rs
port-forward/: Cargo.toml
port-forward/src/: main.rs
splitted-dicordant-extract/: Cargo.toml
splitted-discordant-extract/: README.md
splitted-discordant-extract/src/: main.rs
sys-memcpu/: Cargo.toml
sys-memcpu/src/: main.rs
table-filter/: .bumpversion.cfg  Cargo.toml  Makefile.toml  README.md
table-filter/src/: main.rs
table-filter/tests/: noheader.tsv  t.tsv  table.tsv  test.sh
tcp-proxy/: Cargo.toml
tcp-proxy/src/: main.rs
tsv-split/: Cargo.toml
tsv-split/src/: main.rs
tsv2xlsx/: Cargo.toml
tsv2xlsx/src/: main.rs
week-of-year/: Cargo.toml
week-of-year/src/: main.rs
