[package]
name = "fqcheck"
version = "0.1.5"
authors = ["slyo <sean.lyo@outlook.com>"]
description = "Fastq format check and quantity count."

[dependencies]
bio = "0.29.0"
clap = "2.33.0"
flate2 = { version = "1.0.13", features = ["rust_backend"], default-features = false }
serde = { version = "1.0.102", features = ["derive"] }
serde_json = "1.0.41"
jemallocator = "0.3.2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
