[package]
name = "git-apore"
version = "0.1.0"
authors = ["slyo <sean.lyo@outlook.com>"]
edition = "2018"
description = "Remove tracked files/directory which are in .gitignore from index."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ignore = "^0.4.17"
