[package]
name = "sid"
version = "0.1.0"
authors = ["slyo <sean.lyo@outlook.com>"]
edition = "2018"
description = "Insert size(template length) consensus with little memory."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sled = "^0.34.6"
bam = "^0.1.2"
csv = "^1.1.5"
