[package]
name = "sysmc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "^0.20"
log = "^0.4"
env_logger = "^0.9"
humantime = "^2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
opt-level = 3
