[package]
name = "tf"
version = "0.1.1"
authors = ["slyo <sean.lyo@outlook.com>"]
edition = "2018"
description = "Regex-based tsv/csv file filter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "^1"
regex = "^1"
clap = "^2"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
