[package]
name = "wor"
version = "0.1.0"
authors = ["slyo <sean.lyo@outlook.com>"]
edition = "2018"
description = "Print week number of today, and the week date range."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "^0.4.19"

[profile.release]
lto = true
codegen-units = 1
